--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,5 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: black;
+  background-image: url("/public/炎ロゴ2.png");
   min-height: 50vh;
   display: flex;
   flex-direction: column;
@@ -38,31 +23,28 @@
 }
 
 .body{
-  background-color: #61dafb;
+  background-image: url("/public/テーブル.png");
   font-size: 30px;
-  min-height: 300vh;
+  min-height: 150vh;
 }
 
 .scroll-box {
-  display: flex;
+  background-image: url("/public/フレネル反射.jpg");
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
-  width: 400px;
-  height: 300px;
+  width: 200px;
+  height: 200px;
   border: 1px solid #000;
   padding: 10px;
-  margin: 0 auto;
   overflow-y: scroll; 
-  border: #000;
+  border: 1px solid #000;
   background-color: #f5f5f5;
 }
 
 .post-card {
-  width: 90%; 
-  max-width: 350px; 
+  width: 90%;  
   margin: 10px auto; 
-  background-color: green; 
+  background-image: url("/public/14199.webp");
   color: white; 
   padding: 15px;
   border-radius: 5px;
@@ -72,4 +54,14 @@
 
 .post-card p {
   margin: 0;
+}
+
+.scroll-box {
+  width: 600px; 
+  height: 600px; 
+  border: 1px solid #000;
+  margin: 20px auto; 
+  padding: 10px;
+  overflow-y: scroll; 
+  background-color: #f5f5f5;
 }
