--- a/src/ReviewShowScene.css
+++ b/src/ReviewShowScene.css
@@ -13,15 +13,6 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 .body{
   background-image: url("/public/テーブル.png");
   font-size: 30px;
@@ -49,6 +40,7 @@
   padding: 15px;
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  font-size: 20px;
 }
 
 
